--- a/PoApproval/PoApproval/PoApproval.csproj
+++ b/PoApproval/PoApproval/PoApproval.csproj
@@ -106,6 +106,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="bin\PoApproval.dll" />
+    <Content Include="bin\PoApproval.pdb" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -2244,6 +2246,7 @@
     <Compile Include="login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="pedingapproval.aspx.cs">
       <DependentUpon>pedingapproval.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
